kubernetes-deloyment/k8s/gke/resources/employee-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-app
  labels:
    app-label: employee-app
spec:
  selector:
    matchLabels:
      app-label: employee-app
  replicas: 1
  template:
    metadata:
      labels:
        app-label: employee-app
    spec:
      containers:
        - name: employee-app
          imagePullPolicy: Always
          image: ssamantr/employee-service:1.0.0
          ports:
            - name: "employee-port"
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 2
            failureThreshold: 35
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  labels:
    app-label: employee-app
spec:
  selector:
    app-label: employee-app
  sessionAffinity: None
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
