kubernetes-deloyment/k8s/gke/resources/ingress-api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  rules:
    - http:
        paths:
          - path: /employees
            pathType: Prefix
            backend:
              service:
                name: employee-service
                port:
                  number: 8080
          - path: /address
            pathType: Prefix
            backend:
              service:
                name: address-service
                port:
                  number: 8081
